--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.2",
-    "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "chart.js": "^3.9.1",
     "firebase": "^9.13.0",
@@ -24,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start -p 3500",
     "build": "set SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "deploy": "netlify deploy --prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
